# so-bogus

./: CMakeLists.txt
apps/: CMakeLists.txt
bogus/: BogusConfig.cmake.in  CMakeLists.txt
bogus/Core/Block/: SparseBlockIndex.hpp  SparseBlockMatrixBase.hpp
bogus/Core/BlockSolvers/: BlockSolverBase.hpp
bogus/Core/Eigen/: SparseConversions.hpp
bogus/Core/Utils/: CppTools.hpp
bogus/Interfaces/: MecheInterface.cpp  MecheInterface.hpp
cmake/: FindMKL.cmake
src/: CMakeLists.txt
src/Core/Block/: CompressedSparseBlockIndex.hpp  SparseBlockMatrixBase.impl.hpp
src/Core/Utils/: Timer.hpp
tests/: ADMM.cpp  BlockMV.cpp  CMakeLists.txt  Flat.cpp  GaussSeidel.cpp  Krylov.cpp  Map.cpp  Mkl.cpp  Polynomial.cpp  ProductGaussSeidel.cpp  ProjectedGradient.cpp  ResidualInfo.hpp  Serialization.cpp  SmallFrictionPb.hpp  SparseBlock.cpp
